src/Layout/Header/note-header.css
.log-out {
  width: 6rem;
}

.header-left {
  width: 12rem;
}

.header-mid {
  width: 40rem;
  background-color: var(--accent-two-color);
}
.search-bar {
  width: 40rem;
  border: none;
  font-size: 1rem;
  padding: 0.5rem;
  background-color: var(--accent-two-color);
  outline: none;
  border: none;
  color: var(--foreground-color);
}
.search-bar:focus {
  outline: none;
}

.header-bar {
  justify-content: space-between;
  position: fixed;
  top: 0;
  height: 3.8rem;
  padding: 1rem;
  background-color: var(--accent-one-color);
}
.header-right {
  width: 10rem;
}

.header-righthm {
  gap: 1rem;
}

.header-righthm button {
  width: 5rem;
  font-size: 1rem;
  margin-right: 3rem;
}

.header-icon {
  color: var(--foreground-color);
}
.ham-burger:focus {
  background-color: var(--hover-bg-color);
}

.ham-burger {
  border: none;
  background-color: var(--accent-one-color);
  border-radius: 50%;
  padding: 5px;
}

@media only screen and (max-width: 1020px) {
  .header-mid {
    display: none;
  }
  .header-righthm {
    margin: auto;
  }
  .header-righthm button {
    display: none;
  }
}

@media only screen and (min-width: 1020px) {
  .icon-active {
    display: none;
  }
}

